--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "next": "^14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
-    "react-redux": "^8.1.3",
-    "react-toastify": "^9.1.3"
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
